src/objects/MUSW__Permit__c.object
<CustomObject>
    <description>Permit application details including process dates and status</description>
    <fields>
        <fullName>IsClosed__c</fullName>
        <formula>IF(OR(NOT(ISNULL( MUSW__Certificate_Issued__c )), NOT(ISNULL(MUSW__DateCompleted__c )), MUSW__Expiration_Date__c &gt;TODAY()),1,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Closed</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Iss_Track_No__c</fullName>
        <formula>IF( OR(ISNULL(MUSW__Tracking_Number__c), MUSW__Tracking_Number__c = &quot;&quot;) 
,HYPERLINK(&quot;../&quot;&amp;Id, Name, &quot;_parent&quot;)&amp; &quot; &quot; &amp; HYPERLINK(&quot;/servlet/servlet.Integration?lid=01N460000004mW0&amp;Id=&quot; &amp; Id &amp; 
&quot;&amp;ic=1&amp;object=MUSW__Permit__c&amp;setIssuanceDate=notnull&amp;issuanceDateField=MUSW__Issued_Date__c&amp;setStatus=Issued&amp;statusField=MUSW__Current_Status__c&amp;type=&quot;&amp; CASE( MUSW__Permit_Type__c , 
&quot;Building&quot;, &quot;Building&quot;, 
&quot;Mechanical&quot;, &quot;Mechanical&quot;, 
&quot;Electrical&quot;, &quot;Electrical&quot;, 
&quot;Plumbing&quot;, &quot;Plumbing&quot;,
&quot;Other&quot;, &quot;Other&quot;, 
&quot;DEFAULT&quot; )&amp;&quot;&amp;year=&quot;&amp; TEXT(YEAR(TODAY()))&amp;&quot;&amp;month=&quot;&amp; 
TEXT(MONTH(TODAY()))&amp;&quot;&amp;day=&quot;&amp; TEXT(DAY(TODAY())), &quot;(Issue)&quot;, &quot;_parent&quot;),HYPERLINK( &quot;../&quot;&amp;Id , MUSW__Tracking_Number__c,&quot;_parent&quot; ) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Issue Permit No. and the Permit itself (status = Issued, Issued Date = Today)</inlineHelpText>
        <label>Iss Permit No.</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MUSW__Additional_Details__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Additional Details</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>MUSW__AlertCode__c</fullName>
        <description>Contains the Code of the Alert 0 is no Alert.</description>
        <label>Alert Code</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MUSW__Alert_Indicator__c</fullName>
        <formula>HYPERLINK(&quot;/apex/musw__TaskAlert?id=&quot;+ Id, IMAGE( 
CASE( MUSW__AlertCode__c, 
0, &quot;/img/samples/light_green.gif&quot;, 
1, &quot;/img/samples/light_yellow.gif&quot;, 
2, &quot;/img/samples/light_red.gif&quot;, 
&quot;/servlet/servlet.ImageServer?oid=&quot;+ $Organization.Id +&quot;&amp;id=01560000000RGSN&quot;), 
&quot;none&quot;), &quot;_top&quot;) + IF(MUSW__Parcel__c != null, &quot; Par: &quot; + HYPERLINK(&quot;/apex/musw__TaskAlert?id=&quot;+  MUSW__Parcel__c, IMAGE( 
CASE( MUSW__Parcel__r.MUSW__AlertCode__c, 
0, &quot;/img/samples/light_green.gif&quot;, 
1, &quot;/img/samples/light_yellow.gif&quot;, 
2, &quot;/img/samples/light_red.gif&quot;, 
&quot;/servlet/servlet.ImageServer?oid=&quot;+ $Organization.Id +&quot;&amp;id=01560000000RGSN&quot;), 
&quot;none&quot;), &quot;_top&quot;),&quot;&quot;)</formula>
        <inlineHelpText>Click to view/add/update your Alerts</inlineHelpText>
        <label>Alert</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MUSW__Alert__c</fullName>
        <formula>CASE ( MUSW__AlertCode__c, 
0, &quot;None&quot;, 
1, &quot;At least one active warning Alert&quot;, 
2, &quot;At least one active notice Alert&quot;,
&quot;None&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Alert Note</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MUSW__Applicant__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Applicant</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>Permits_Applied</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MUSW__Certificate_Issued__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Certificate Issued</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>MUSW__Construction_Area__c</fullName>
        <inlineHelpText>Total construction area calculated from area work items (eg. SQ FT)</inlineHelpText>
        <label>Construction Area</label>
        <precision>12</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MUSW__Construction_Type__c</fullName>
        <label>Construction Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>I</fullName>
                </value>
                <value>
                    <fullName>IA</fullName>
                </value>
                <value>
                    <fullName>IB</fullName>
                </value>
                <value>
                    <fullName>IIA</fullName>
                </value>
                <value>
                    <fullName>IIB</fullName>
                </value>
                <value>
                    <fullName>IIIA</fullName>
                </value>
                <value>
                    <fullName>IIIB</fullName>
                </value>
                <value>
                    <fullName>IV</fullName>
                </value>
                <value>
                    <fullName>VA</fullName>
                </value>
                <value>
                    <fullName>VB</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MUSW__Current_Status__c</fullName>
        <label>Current Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
                <value>
                    <fullName>Finaled</fullName>
                </value>
                <value>
                    <fullName>Issued</fullName>
                </value>
                <value>
                    <fullName>Pending</fullName>
                    <default>true</default>
                    <label>Pending</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MUSW__DateCompleted__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Completion Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>MUSW__Days_Till_Issuance__c</fullName>
        <formula>IF( ISNULL(MUSW__Issued_Date__c) , NULL,   (NOW() - CreatedDate) - (TODAY() - MUSW__Issued_Date__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label># Days Till Issuance</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MUSW__Expiration_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>MUSW__IsPermitIssued__c</fullName>
        <formula>IF(NOT(ISNULL(MUSW__Issued_Date__c)) ,1, 0)</formula>
        <label>IsPermitIssued</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MUSW__Issued_Date__c</fullName>
        <description>Latest Permit Issued Date</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Issue Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>MUSW__Issued_Number__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>Issued No.</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MUSW__Job_Description__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Job Description</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>MUSW__Job_Location_City__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>City</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MUSW__Job_Location_Latitude__c</fullName>
        <label>Latitude DO NOT USE</label>
        <precision>14</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MUSW__Job_Location_Longitude__c</fullName>
        <label>Longitude DO NOT USE</label>
        <precision>14</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MUSW__Job_Location_Post_Zip_Code__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Zip / Post Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MUSW__Job_Location_State__c</fullName>
        <label>State/ Prov.</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AL</fullName>
                </value>
                <value>
                    <fullName>AK</fullName>
                </value>
                <value>
                    <fullName>AS</fullName>
                </value>
                <value>
                    <fullName>AZ</fullName>
                </value>
                <value>
                    <fullName>AR</fullName>
                </value>
                <value>
                    <fullName>CA</fullName>
                    <default>true</default>
                    <label>CA</label>
                </value>
                <value>
                    <fullName>CO</fullName>
                </value>
                <value>
                    <fullName>CT</fullName>
                </value>
                <value>
                    <fullName>DE</fullName>
                </value>
                <value>
                    <fullName>DC</fullName>
                </value>
                <value>
                    <fullName>FM</fullName>
                </value>
                <value>
                    <fullName>FL</fullName>
                </value>
                <value>
                    <fullName>GA</fullName>
                </value>
                <value>
                    <fullName>GU</fullName>
                </value>
                <value>
                    <fullName>HI</fullName>
                </value>
                <value>
                    <fullName>ID</fullName>
                </value>
                <value>
                    <fullName>IL</fullName>
                </value>
                <value>
                    <fullName>IN</fullName>
                </value>
                <value>
                    <fullName>IA</fullName>
                </value>
                <value>
                    <fullName>KS</fullName>
                </value>
                <value>
                    <fullName>KY</fullName>
                </value>
                <value>
                    <fullName>LA</fullName>
                </value>
                <value>
                    <fullName>ME</fullName>
                </value>
                <value>
                    <fullName>MH</fullName>
                </value>
                <value>
                    <fullName>MD</fullName>
                </value>
                <value>
                    <fullName>MA</fullName>
                </value>
                <value>
                    <fullName>MI</fullName>
                </value>
                <value>
                    <fullName>MN</fullName>
                </value>
                <value>
                    <fullName>MS</fullName>
                </value>
                <value>
                    <fullName>MO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MUSW__Job_Location_Street__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Street</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MUSW__Job_Location_Unit__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Unit</label>
        <length>16</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MUSW__Job_Location__c</fullName>
        <formula>IF( AND(NOT(ISNULL(MUSW__Job_Location_Unit__c)),MUSW__Job_Location_Unit__c &lt;&gt;&quot;&quot;),MUSW__Job_Location_Unit__c &amp; &quot; - &quot;,&quot;&quot;) &amp; MUSW__Job_Location_Street__c  &amp; &quot; &quot; &amp;  MUSW__Job_Location_City__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Job Location</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MUSW__Latitude__c</fullName>
        <label>Latitude</label>
        <precision>14</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MUSW__Longitude__c</fullName>
        <label>Longitude</label>
        <precision>14</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MUSW__Occupancy_Limit__c</fullName>
        <label>Occupancy Limit</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MUSW__Occupancy__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Use Group</label>
        <referenceTo>MUSW__Occupancy_Type__c</referenceTo>
        <relationshipName>Permit</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MUSW__Parcel__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parcel</label>
        <referenceTo>MUSW__Parcel__c</referenceTo>
        <relationshipName>Permits</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MUSW__Permit_Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Building</fullName>
                    <default>true</default>
                    <label>Building</label>
                </value>
                <value>
                    <fullName>Electrical</fullName>
                </value>
                <value>
                    <fullName>Fire</fullName>
                </value>
                <value>
                    <fullName>Mechanical</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Plumbing</fullName>
                </value>
                <value>
                    <fullName>Rental</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MUSW__Primary_Parcel_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>As indicated on parcel</inlineHelpText>
        <label>Primary Owner</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>Permits</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MUSW__Project_Area__c</fullName>
        <inlineHelpText>Square Area - Total area calculated from area work items (eg. SQ FT) contributing to Permit Valuation</inlineHelpText>
        <label>Project Area</label>
        <precision>13</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MUSW__Project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project</label>
        <referenceTo>MUSW__Master_Project__c</referenceTo>
        <relationshipName>Permits</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MUSW__Renewal_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Date Permit renewed or extended</inlineHelpText>
        <label>Renewed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>MUSW__Status__c</fullName>
        <formula>IF(ISPICKVAL( MUSW__Current_Status__c , &quot;Cancelled&quot;), &quot;Cancelled&quot;,
IF(ISPICKVAL(MUSW__Current_Status__c , &quot;Finaled&quot;), &quot;Finaled&quot;,
IF(ISPICKVAL(MUSW__Current_Status__c , &quot;In Plan Check&quot;), &quot;In Plan Check&quot;,
IF(ISPICKVAL(MUSW__Current_Status__c , &quot;Issued&quot;), &quot;Issued&quot;,
IF(ISPICKVAL(MUSW__Current_Status__c , &quot;Outstanding&quot;), &quot;Outstanding&quot;,
IF(ISPICKVAL(MUSW__Current_Status__c , &quot;Pending&quot;), &quot;Pending&quot;,
IF(ISPICKVAL(MUSW__Current_Status__c , &quot;Resolved&quot;), &quot;Resolved&quot;,
IF(ISPICKVAL(MUSW__Current_Status__c , &quot;Under Review&quot;), &quot;Under Review&quot;,
IF(ISPICKVAL(MUSW__Current_Status__c , &quot;Denied&quot;), &quot;Denied&quot;,
IF(ISPICKVAL(MUSW__Current_Status__c , &quot;Approved&quot;), &quot;Approved&quot;,
IF(ISPICKVAL(MUSW__Current_Status__c , &quot;Closed&quot;), &quot;Closed&quot;,
&quot;Not Set - Please Use Controls Below&quot;)))))))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MUSW__Subtype__c</fullName>
        <inlineHelpText>What is being constructed, serviced or installed?</inlineHelpText>
        <label>Subtype</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Dwelling</fullName>
                    <default>true</default>
                    <label>Dwelling</label>
                </value>
                <value>
                    <fullName>Fence</fullName>
                </value>
                <value>
                    <fullName>Deck</fullName>
                </value>
                <value>
                    <fullName>Roof</fullName>
                </value>
                <value>
                    <fullName>Accessory</fullName>
                </value>
                <value>
                    <fullName>Water Line</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MUSW__Total_Due__c</fullName>
        <formula>MUSW__Total_Fees__c - IF(MUSW__Total_Payments__c = 0 , MUSW__Total_Receipts__c, MUSW__Total_Payments__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Balance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MUSW__Total_Fees__c</fullName>
        <inlineHelpText>Refreshed by Calc Financials button and Run Automation</inlineHelpText>
        <label>Total Fees</label>
        <precision>13</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MUSW__Total_Payments__c</fullName>
        <label>Total Payments</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MUSW__Total_Receipts__c</fullName>
        <inlineHelpText>Refreshed by Calc Financials button and Pay Fees</inlineHelpText>
        <label>Total Receipts</label>
        <precision>13</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MUSW__Tracking_Number__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>Permit No.</label>
        <length>15</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>MUSW__Use_Class__c</fullName>
        <label>Use Class</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Residential</fullName>
                </value>
                <value>
                    <fullName>Commercial</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MUSW__Use_Type__c</fullName>
        <label>Use Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Commercial</fullName>
                </value>
                <value>
                    <fullName>Multi Family Dwelling</fullName>
                </value>
                <value>
                    <fullName>Mixed Use</fullName>
                </value>
                <value>
                    <fullName>Single Family Dwelling</fullName>
                    <default>true</default>
                    <label>Single Family Dwelling</label>
                </value>
                <value>
                    <fullName>Industrial</fullName>
                </value>
                <value>
                    <fullName>Institutional</fullName>
                </value>
                <value>
                    <fullName>Mobile Home</fullName>
                </value>
                <value>
                    <fullName>Transient Residence</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MUSW__Valuation__c</fullName>
        <label>Valuation</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MUSW__Work_Type__c</fullName>
        <label>Work Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                    <default>true</default>
                    <label>New</label>
                </value>
                <value>
                    <fullName>Addition</fullName>
                </value>
                <value>
                    <fullName>Alteration</fullName>
                </value>
                <value>
                    <fullName>Demolition</fullName>
                </value>
                <value>
                    <fullName>Repair</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Permit.</label>
    <listViews>
        <fullName>MUSW__All</fullName>
        <columns>NAME</columns>
        <columns>MUSW__Alert_Indicator__c</columns>
        <columns>MUSW__Tracking_Number__c</columns>
        <columns>MUSW__Permit_Type__c</columns>
        <columns>MUSW__Status__c</columns>
        <columns>MUSW__Job_Location__c</columns>
        <columns>OWNER.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>MUSW__Longitude__c</field>
            <operation>notEqual</operation>
        </filters>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>P-{0000000}</displayFormat>
        <label>Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Permits.</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>